# Simulateur

./: #Makefile#  CMakeLists.txt  README.md  simulateur.db
assets/pannes/: Mohamed00_01_52.xml  Mohamed23_57_06.xml  pannes1.xml
docs/: .gitignore  Doxyfile
include/core/: Moteur.h  Pompe.h  Reservoir.h  Systeme.h  Valve.h  ValveMR.h  ValveRes.h
include/gui/: Logingui.h  MainGui.h  MenuGui.h  MoteurWidget.h  MyQWidget.h  NavBarWidget.h  PompeWidget.h  TankWidget.h  VMRWidget.h  VResWidget.h  VWidget.h
include/states/: Loginstate.h  MainGState.h  MenuState.h  State.h  StateManager.h
include/utils/: panne.h  xmlparser.h
src/: Simulateur.cc
src/core/: Moteur.cc  Pompe.cc  Reservoir.cc  Systeme.cc  Valve.cc  ValveMR.cc  ValveRes.cc
src/gui/: Logingui.cc  MainGui.cc  MenuGui.cc  MoteurWidget.cc  NavBarWidget.cc  PompeWidget.cc  TankWidget.cc  VMRWidget.cc  VResWidget.cc  VWidget.cc
src/states/: Loginstate.cc  MainGState.cc  MenuState.cc  StateManager.cc
src/utils/: panne.cc  xmlparser.cc
